# travel_buddy

./: .dockerignore  .env.example  .gitignore  README.md  app.py  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  main.py
backend/db/: clean_data.py  ingest_db.py  models.py
backend/endpoints/: agent.py  destinations.py  guide.py  health.py
backend/scraping/sources/: __init__.py
backend/utils/: guide_service.py  seed_loader.py
data/processed/: greece_athens.jsonl  greece_cyclades.jsonl  greece_dodecanese.jsonl  greece_ionian_islands.jsonl  greece_thessaloniki.jsonl  greece_thrace.jsonl  japan_chugoku.jsonl  japan_general.jsonl  japan_hokkaido.jsonl  japan_hokuriku-shinetsu.jsonl  japan_kansai.jsonl  japan_kanto.jsonl  japan_kyushu.jsonl  japan_okinawa.jsonl  japan_shikoku.jsonl  japan_tohoku.jsonl  japan_tokai.jsonl
data/seeds/: japan_attractions.json  japan_destinations.json  japan_events.json  japan_travel_styles.json
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: REFERENCES.md  way-of-working.md
docs/github/: issues.txt
frontend/: Dockerfile  app.py
frontend/components/: destination_search.py  guide_section.py
frontend/frontend_utils/: api_client.py  settings.py
frontend/pages/: agent_chat.py  home.py  recommendations.py  traveling.py
scripts/: .env.example  README.md
scripts/github/: set_roadmap_dates_safe.sh  update_issues_part1.sh  update_issues_part2.sh  update_issues_part3.sh
src/data/raw/: cherry_blossoms_raw.md  fushimi_inari_raw.md  gion_matsuri_raw.md  kinkakuji_raw.md  kyoto_overview_raw.md  osaka_castle_raw.md  sensoji_temple_raw.md  tokyo_overview_raw.md  visa_entry_requirements_raw.md
src/travel_buddy/: __init__.py  main.py
src/travel_buddy/agents/: agent.py  base.py  mock_agent.py  models.py
src/travel_buddy/api/: main.py  router.py
src/travel_buddy/data/: airports.py
src/travel_buddy/db/: clean_data.py  ingest_db.py  models.py  session.py
src/travel_buddy/ingestion/: chunker.py  embedder.py  lancedb_storage.py  parser.py  run.py  run_ingestion_batch.py
src/travel_buddy/schemas/: agent.py  destination.py  guide.py  recommendation.py  transport.py
src/travel_buddy/scraping/: __init__.py  (+1 more)
tests/: test_agent_comprehensive.py  test_check_db.py  test_guide.py  test_health.py
views/: agent_chat.py  home.py  recommendations.py
(+36 files in other folders)
