[project]
name = "travel-buddy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pydantic-ai",
    "python-dotenv>=1.2.1",
    "setuptools>=80.10.2",
    "ipykernel>=7.1.0",
    "pydantic-ai-slim[tavily]>=0.8.1",
]

[project.optional-dependencies]
backend = [
    "fastapi",
    "uvicorn",
    "google-generativeai",
    "pandas",
    "lancedb",
    "tantivy>=0.25.1",
    "sentence-transformers>=5.2.2",
    "langchain-text-splitters>=1.1.0",
]

frontend = [
    "streamlit>=1.40.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

