[project]
name = "travel-buddy"
version = "0.1.0"
description = "AI travel concierge with multi-country support"
requires-python = ">=3.13"

dependencies = [
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pandas>=2.3.3",
    "lancedb>=0.27.1",
]

[project.optional-dependencies]
backend = [
    "pydantic-ai>=1.53.0",
    "fastapi>=0.128.0",
    "pydantic-ai-slim[tavily]>=1.53.0",
    "uvicorn>=0.40.0",
    "google-generativeai>=0.8.6",
    "lancedb>=0.27.1",
]

frontend = [
    "streamlit>=1.53.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "sentence-transformers>=5.2.2",
    "tantivy>=0.25.1",
    "langchain-text-splitters>=1.1.0",
    "firecrawl-py>=1.10.0",
]
